--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
               data: [460, 458, 330, 502, 430, 610, 488, 550, 558, 390, 562, 490, 670, 538, 234, 345, 432, 120, 510, 410, 360, 450, 345, 555, 155, 433, 345,444, 510, 490, 480],
               borderWidth: 2,
               backgroundColor: 'rgba(63,82,227,.8)',
-              borderColor: 'rgba(63,82,227,.8)',
+              borderColor: 'transparent',
               borderWidth: 2.5,
               pointBackgroundColor: '#ffffff',
               pointRadius: 4
